[package]
name = "pico-tflmicro-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"

[build-dependencies]
# cmake = "0.1"
cmake = "0.1.50"
embuild = { version = "0.31.1", features = ["cmake"] }
anyhow = "1.0.81"
cc = { version = "1.0.90", features = ["parallel"] }
